Fix: List.getFirst() durch get(0) ersetzen (Java 17).
Co-authored-by: Cursor <cursoragent@cursor.com>